# a2atlassian

./: .agent-harness.yml  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml  server.json
.github/workflows/: publish.yml
docs/superpowers/specs/: 2026-04-23-a2atlassian-cleanup-design.md  2026-04-23-a2atlassian-confluence-design.md
scripts/: record_fixtures.py
src/a2atlassian/: cli.py  client.py  config.py  confluence_client.py  connections.py  decorators.py  errors.py  formatter.py  mcp_server.py
src/a2atlassian/confluence/: content_format.py  pages.py
src/a2atlassian/confluence_tools/: search.py
src/a2atlassian/jira/: boards.py  comments.py  issues.py  links.py  projects.py  sprints.py  transitions.py
src/a2atlassian/jira_tools/: __init__.py  boards.py  comments.py  fields.py  issues.py  links.py  projects.py  sprints.py  transitions.py  users.py  watchers.py  worklogs.py
tests/: conftest.py  test_cli.py  test_client.py  test_connections.py  test_decorators.py  test_errors.py  test_formatter.py  test_integration.py  test_mcp_server.py
tests/confluence/: test_client.py  test_content_format.py  test_pages.py
tests/confluence_tools/: test_registration.py
tests/fixture_tests/: conftest.py  test_boards.py  test_comments.py  test_fields.py  test_issues.py  test_links.py  test_projects.py  test_sprints.py  test_transitions.py  test_users.py  test_watchers.py  test_worklogs.py
tests/fixtures/: confluence_page.json  confluence_page_children.json  jira_boards.json  jira_comments.json  jira_comments_rich.json  jira_create_issue_response.json  jira_fields.json  jira_issue.json  jira_issue_done.json  jira_issue_epic.json  jira_issue_full.json  jira_issue_minimal.json  jira_issue_subtask.json  jira_link_types.json  jira_project_components.json  jira_project_versions.json  jira_projects.json  jira_search.json  jira_search_assigned.json  jira_search_labels.json  jira_sprint_issues.json  jira_sprints.json  jira_transitions.json  jira_user.json  jira_watchers.json  jira_worklogs.json  jira_worklogs_rich.json
tests/jira/: test_boards.py  test_comments.py  test_fields.py  test_issues.py  test_links.py  test_projects.py  test_sprints.py  test_transitions.py  test_users.py  test_watchers.py  test_worklogs.py
